--- a/rabbit-hole/build.gradle
+++ b/rabbit-hole/build.gradle
@@ -29,9 +29,11 @@ bootJar {
 dependencies {
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-amqp'
 
+    // Tests
     testImplementation("org.springframework.boot:spring-boot-starter-test") {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '4.2.0'
 }
 
 build {
